Fixing background attachment.

--- a/fatcatmap/assets/sass/catnip.sass
+++ b/fatcatmap/assets/sass/catnip.sass
@@ -12,6 +12,7 @@
 
 body
   background-color: $grey-dark
+  background-attachment: fixed
   line-height: $line-height
   font:
     family: $font-family
