Further template structure refactoring and cleanup. Working frontend template injection. Added slimmer to requirements and fixed google-api-python-client issue.

--- a/fatcatmap/templates/source/core/__base.html
+++ b/fatcatmap/templates/source/core/__base.html
@@ -32,18 +32,15 @@
   </head>
 
   <body class="{{ theme|default('fcm-dark') }} alpha">
+    {%- block body %}{% endblock body %}
     <!-- JS -->
     <div id="js-south" class="hidden">
       {% block south -%}
-      <script type="text/javascript" nonce="{{ nonce.script }}" src="{{ asset.script("lib/d3/d3.js") }}"></script>
-      <script type="text/javascript" nonce="{{ nonce.script }}" src="{{ asset.script("lib/vue/vue.js") }}"></script>
-
-      <!-- context -->
+      <script type="text/javascript" defer nonce="{{ nonce.script }}" src="{{ asset.script("lib/d3/d3.js") }}"></script>
+      <script type="text/javascript" defer nonce="{{ nonce.script }}" src="{{ asset.script("lib/vue/vue.js") }}"></script>
+      {% if config.assets.config.serving_mode != "cdn" -%}<script type="text/javascript" defer nonce="{{ nonce.script }}" src="{{ asset.script("compiled/app.debug.js") }}"></script>{%- endif %}
       <script id="js-context" nonce="{{ nonce.script }}" type="application/json">{{ js_context|json|safe }}</script><!-- end #js-context -->
       {% if js_context.pagedata -%}<script id="js-data" nonce="{{ nonce.script }}" type="application/json">{{ pagedata|json|safe }}</script><!-- end #js-data -->{%- endif %}
-      {% if config.assets.config.serving_mode != "cdn" -%}
-        <script type="text/javascript" nonce="{{ nonce.script }}" src="{{ asset.script("compiled/app.debug.js") }}"></script>
-      {%- endif %}
       {%- endblock south %}
     </div><!-- end #js-south -->
   </body>
