--- a/fatcatmap/assets/js/templates/layout/footer.html
+++ b/fatcatmap/assets/js/templates/layout/footer.html
@@ -1,16 +1,17 @@
 <footer id="footer">
 
   <div id="version">
-    <h1>technology preview - NOT FOR EXTERNAL RELEASE</h1>
+    <h1>technology preview</h1>
+    <h1>NOT FOR EXTERNAL RELEASE</h1>
   </div>
 
   <nav id="page_nav">
     <ul class="pages">
-      <li><h2 class="footer-nav" href="/terms">terms</h2></li>
-      <li><h2 class="footer-nav" href="/privacy">privacy</h2></li>
-      <li><h2 class="footer-nav" href="/contact">contact</h2></li>
-      <li><h2>PRIVATE &amp; CONFIDENTIAL</h2></li>
+      <li><h2 class="footer-nav" href="/terms" data-route>terms</h2></li>
+      <li><h2 class="footer-nav" href="/privacy" data-route>privacy</h2></li>
+      <li><h2 class="footer-nav" href="/contact" data-route>contact</h2></li>
     </ul>
+    <h1>PRIVATE &amp; CONFIDENTIAL</h1>
   </nav>
 
 </footer>
