--- a/fatcatmap/assets/sass/component/_login.sass
+++ b/fatcatmap/assets/sass/component/_login.sass
@@ -13,14 +13,14 @@
     margin: 5px 0 0 10px
     padding: 0 8px
     border: none
-    background-color: $grey
+    background-color: $grey-dark
     color: $grey-light
 
     &:hover
-      background-color: lighten($grey-dark, 10%)
+      background-color: lighten($grey-darker, 10%)
 
     &:active
-      background-color: $grey-dark
+      background-color: $grey-darker
 
   button#signup_submit
     background-color: darken($brand-primary, 20%)
@@ -32,7 +32,7 @@
       background-color: $brand-primary
 
 #service_signin
-  background-color: lighten($grey, 15%)
+  background-color: lighten($grey-dark, 15%)
 
   h4, ul
     display: inline-block
