--- a/fatcatmap/assets/sass/component/_map.sass
+++ b/fatcatmap/assets/sass/component/_map.sass
@@ -25,7 +25,7 @@ $leaf-opacity: 0.6
   right: 5%
   bottom: 5%
   text-align: center
-  background-color: $grey
+  background-color: $grey-dark
 
   label
     margin: 0.5em auto
