--- a/fatcatmap/assets/sass/var/_form.sass
+++ b/fatcatmap/assets/sass/var/_form.sass
@@ -2,13 +2,13 @@
 
 $input-border-radius: 0
 
-$input-text-color: $grey
-$input-focus-text-color: $grey-dark
+$input-text-color: $grey-dark
+$input-focus-text-color: $grey-darker
 $input-valid-text-color: mix($input-text-color, $brand-success)
 $input-invalid-text-color: mix($input-text-color, $brand-danger)
 
-$input-border-color: $grey
-$input-focus-border-color: $grey-dark
+$input-border-color: $grey-dark
+$input-focus-border-color: $grey-darker
 $input-valid-border-color: mix($input-border-color, $brand-success)
 $input-invalid-border-color: mix($input-border-color, $brand-danger)
 
