--- a/fatcatmap/assets/sass/catnip.sass
+++ b/fatcatmap/assets/sass/catnip.sass
@@ -10,8 +10,11 @@
 @import "layout/header"
 @import "layout/footer"
 
+html
+  -webkit-font-smoothing: subpixel-antialiased
+
 body
-  background-color: $grey-dark
+  background-color: $grey-darker
   background-attachment: fixed
   line-height: $line-height
   font:
