--- a/fatcatmap/assets/sass/layout/_footer.sass
+++ b/fatcatmap/assets/sass/layout/_footer.sass
@@ -1,49 +1,49 @@
 @import "var/font"
 @import "var/color"
+@import "mixin/transition"
 
 #footer
-  div
+  div, nav
     line-height: normal
 
   h1, h2
     margin: 0
-    cursor: pointer
     vertical-align: middle
-    font-weight: $font-weight-light
+    color: $grey-dark
+    font:
+      size: $font-size-small
+      weight: $font-weight-light
+
+  h1:last-child
+    margin-top: 0.2em
 
 #version
   position: fixed
-  bottom: 5px
-  left: 5px
+  bottom: 1em
+  left: 1em
 
-  h1
-    font-size: $font-size-base
+  h1:first-child
     color: $grey
 
 #page_nav
   position: fixed
-  bottom: 5px
-  right: 5px
+  bottom: 1em
+  right: 1em
 
   ul
     margin: 0
     padding: 0
+    height: 15px
     -webkit-padding-start: 0
     list-style-type: none
 
     li
       display: inline-block
-      margin-right: 0.75em
+      margin-left: 0.75em
 
-  h2
-    color: $grey-lighter
-    font-size: $font-size-small
-    +transition-property(opacity)
-    +transition-duration(0.2s)
-    +transition-ease(ease)
-    cursor: default
-    opacity: 0.65
+  h2[href]
+    color: $grey
+    +transition(color 0.15s ease)
 
-  h2[href]:hover
-    opacity: 1
-    cursor: pointer
+    &:hover
+      color: $grey-lighter
