--- a/fatcatmap/assets/sass/layout/_header.sass
+++ b/fatcatmap/assets/sass/layout/_header.sass
@@ -1,10 +1,12 @@
 @import "var/font"
+@import "var/form"
 @import "var/color"
 @import "var/layout"
+@import "mixin/transition"
 @import "component/autocomplete"
 
 #header
-  div
+  & > div
     line-height: normal
 
   h1, h2
@@ -35,22 +37,35 @@
     &.signup:hover, &.signup:active
       background-color: $link-color-hover
       border-color: $link-color-hover
-      color: $grey-dark
+      color: $grey-darker
 
 #graph_search
+  margin: 1em 1em 0 0
+
   input
     width: 15em
     height: 32px
     padding: 6px 8px
-
-    &:focus
-      color: $grey-light
+    color: $input-focus-text-color
+    background-color: rgba(255, 255, 255, 0.05)
+    border-bottom-color: $transparent
+    +transition-property(color, background-color, border-bottom-color)
+    +transition-duration(0.15s)
+    +transition-ease(ease)
 
     &::-webkit-input-placeholder
-      font-weight: $font-weight-light
+      color: $input-focus-text-color
+      font-family: "fcm"
+      text-align: right
+      +transition(color 0.15s ease)
 
-  .autocomplete-wrap
-    margin: 1em 1em 0 0
+    &:focus, &.focused
+      color: $input-text-color
+      background-color: $input-background-color
+      border-bottom-color: $input-border-color
+
+      &::-webkit-input-placeholder
+        color: $input-text-color
 
 
 #logo_main
