--- a/fatcatmap/assets/sass/var/_color.sass
+++ b/fatcatmap/assets/sass/var/_color.sass
@@ -1,8 +1,9 @@
 
 // thx bootstrap
-$grey-darker: lighten(#000, 13.5%)
-$grey-dark: lighten(#000, 20%)
-$grey: lighten(#000, 33.5%)
+$grey-darkest: lighten(#000, 13.5%)
+$grey-darker: lighten(#000, 20%)
+$grey-dark: lighten(#000, 33.5%)
+$grey: lighten(#000, 48%)
 $grey-light: lighten(#000, 60%)
 $grey-lighter: lighten(#000, 68%)
 $grey-lightest: lighten(#000, 90%)
