Adding fonts locally and using local style reference.

--- a/fatcatmap/templates/source/core/__base.html
+++ b/fatcatmap/templates/source/core/__base.html
@@ -14,7 +14,7 @@
     <link rel="icon" href="/assets/img/favicon.png" type="image/png">
     <link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/assets/style/catnip.css" type="text/css">
-    <link rel="stylesheet" href="//cloud.typography.com/6717292/775624/css/fonts.css" type="text/css">
+    <link rel="stylesheet" href="/assets/ext/fonts/232792/0E2030883D1235809.css" type="text/css">
 
     <!-- info -->
     <meta name="author" content="momentum labs">
