--- a/fatcatmap/templates/source/layouts/app.html
+++ b/fatcatmap/templates/source/layouts/app.html
@@ -1,6 +1,6 @@
 {% extends "core/__base.html" %}
 {% block body %}
-    <div id='templates' style='display:none;'>
+    <div id='templates' class='hidden' style='position:fixed;display:none;'>
     {%- block templates -%}
     {%- if frontend.templates -%}
     {% for path, template in frontend.templates %}
