--- a/fatcatmap/assets/js/templates/detail/legislator.html
+++ b/fatcatmap/assets/js/templates/detail/legislator.html
@@ -4,6 +4,7 @@
   </section>
 
   <section class="portrait">
-    <img class="{{kind | lowercase}} govtrack thumbnail" alt="{{parent.name.primary}}" width="50" height="50"/>
+    <img class="{{kind | lowercase}} bioguide portrait" alt="{{parent.name.primary}}" v-attr="
+      src: 'https://fatcatmap.org/image-proxy/providence-clarity/warehouse/' + media.md + '.jpg'"/>
   </section>
 </div>
