--- a/fatcatmap/templates/source/core/__base.html
+++ b/fatcatmap/templates/source/core/__base.html
@@ -14,29 +14,6 @@
     <link rel="icon" href="/assets/img/favicon.png" type="image/png">
     <link rel="stylesheet" href="/assets/style/catnip.css" type="text/css">
     <link rel="stylesheet" href="/assets/ext/fonts/232792/0E2030883D1235809.css" type="text/css">
-    {% if agent and agent == 'demo' %}
-    <!-- demo CSS -->
-    <style>
-
-      #app {
-        top: 2.5em;
-        left: 0;
-        right: 10px;
-        bottom: 0;
-        position: fixed;
-      }
-
-      #logo_main {
-        top: 2em;
-        position: fixed;
-      }
-
-      #graph_search {
-        display: none;
-      }
-
-    </style>
-    {% endif %}
 
     <!-- info -->
     <meta name="author" content="momentum labs">
@@ -68,7 +45,7 @@
       {% block south -%}
       <script type="text/javascript" defer nonce="{{ nonce.script }}" src="{{ asset.script("lib/d3/d3.js") }}"></script>
       <script type="text/javascript" defer nonce="{{ nonce.script }}" src="{{ asset.script("lib/vue/vue.js") }}"></script>
-      <script type="text/javascript" defer nonce="{{ nonce.script }}" src="{{ asset.script("compiled/app.min.js") }}"></script>
+      <script type="text/javascript" defer nonce="{{ nonce.script }}" src="{{ asset.script("compiled/app.debug.js") }}"></script>
       <script id="js-context" nonce="{{ nonce.script }}" type="application/json">{{ js_context|json|safe }}</script><!-- end #js-context -->
       {% if js_context.pagedata -%}<script id="js-data" nonce="{{ nonce.script }}" type="application/json">{{ pagedata|json|safe }}</script><!-- end #js-data -->{%- endif %}
       {%- endblock south %}
