Return to old URL scheme. Working detail views for contributors.

--- a/fatcatmap/assets/js/templates/layout/header.html
+++ b/fatcatmap/assets/js/templates/layout/header.html
@@ -4,7 +4,7 @@
     <h2 class="signup" href="/login" data-route>sign up &amp; login</h2>
   </div>
 
-  <div id="graph_search" class="right" v-component="component.autocomplete"></div>
+  <div id="graph_search" class="right" v-component="component.autocomplete" v-if="page.search"></div>
 
   <div id="logo_main">
     <h1 class="logo" href="/" data-route><svg version="1.1" baseProfile="tiny" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 181.43 178" xml:space="preserve"><g><path fill="#AEBE2F" d="M152.28,0c0.33,0,0.67,0,1,0c0.85,2.14,1.62,4.32,2.55,6.43c6.86,15.48,10.05,31.56,8.63,48.56
