FCM-18: Detail Views.
- Add Committee view and template
- Convert current detail views to use node kind for classing
- Add 'page.name' property to App and use for view routing
- Explicitly inject 'app' namespace into ServiceContext
- Remove superfluous descriptor in events.Emitter

--- a/fatcatmap/assets/js/templates/app.html
+++ b/fatcatmap/assets/js/templates/app.html
@@ -1,6 +1,6 @@
 <div id="app" class="app container" v-on="click: route">
 
-  <div v-component="layout.stage" v-if="page"></div>
+  <div v-component="layout.stage" v-if="page.active"></div>
   <div v-component="layout.header"></div>
   <div v-component="layout.footer"></div>
 
