--- a/fatcatmap/assets/js/templates/detail/committee.html
+++ b/fatcatmap/assets/js/templates/detail/committee.html
@@ -1,9 +1,9 @@
 <div class="detail-{{kind | lowercase}}" data-kind="{{kind | lowercase}}">
   <section class="byline">
-    <h2>{{kind}}</h2>
+    <h2>{{data.name.primary}} {{kind}}</h2>
   </section>
 
   <section class="details">
-    <span><strong>FEC Category:</strong> {{data.fec_category}}</span>
+    
   </section>
 </div>
