--- a/fatcatmap/assets/js/templates/layout/stage.html
+++ b/fatcatmap/assets/js/templates/layout/stage.html
@@ -1,7 +1,7 @@
 <section id="stage" class="stage" v-with="page" v-ref="stage">
 
   <section class="main">
-      <div v-component="page.map"></div>
+      <div v-view="name"></div>
   </section>
 
 </section>
