--- a/fatcatmap/assets/js/templates/detail/legislator.html
+++ b/fatcatmap/assets/js/templates/detail/legislator.html
@@ -1,4 +1,4 @@
-<div class="detail-legislator" data-kind="{{kind | lowercase}}">
+<div class="detail-{{kind | lowercase}}" data-kind="{{kind | lowercase}}">
   <section class="byline">
     <h2>{{parent.name.primary}}</h2>
   </section>
